--- a/style.css
+++ b/style.css
@@ -162,7 +162,67 @@ nav {
     margin: 0 auto;
     margin-bottom: 125px;
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
     gap: 50px;
-    border: 1px solid black;
+    
+}
+.review h1 {
+    font-size: 42px;
+    font-weight: bold;
+    color: #252432;
+    text-align: center;
+}
+.rating{
+    margin-bottom: 15px;
+}
+.review-card {
+    width: 366px;
+    background-color: #F2EDED;
+    padding: 24px;
+    border-radius: 24px;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+.name{
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+.comment {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.comment h3 {
+    font-size: 24px;
+    color: #1E1E1E;
+    font-weight: bold;
+    color: #252432;
+}
+.name img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+}
+.name-text h4 {
+    font-size: 16px;
+    color: #757575;
+    font-weight: 500;
+}
+.name-text p {
+    font-size: 14px;
+    color: #B3B3B3;
+    font-weight: 400;
+}
+.card-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+.review-card:hover {
+    transform: scale(1.025);
+    box-shadow: #B3B3B3 0px 0px 20px;
+    transition: 0.3s;
 }
