--- a/style.css
+++ b/style.css
@@ -226,3 +226,38 @@ nav {
     box-shadow: #B3B3B3 0px 0px 20px;
     transition: 0.3s;
 }
+/* focus  */
+.focus {
+    width: 80%;
+    padding: 71px 150px;
+    margin: 0 auto;
+    margin-bottom: 125px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 25px;
+    background-color: #f0f1f5;
+    border-radius: 14px;
+}
+.focus-title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+}
+.focus-title h1 {
+    font-size: 50px;
+    font-weight: bold;
+    color: #000000;
+}
+.focus-title p {
+    /* font-size: 20px; */
+    color: #767474;
+    text-align: center;
+}
+.focus-img img {
+    width: 840px;
+    
+    border-radius: 24px;
+}
