--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
     font-family: "Raleway", sans-serif;
 
 }
-body{
+
+body {
     background-color: #e3e8f1;
 }
 
@@ -164,17 +165,20 @@ nav {
     flex-direction: column;
     /* align-items: center; */
     gap: 50px;
-    
+
 }
+
 .review h1 {
     font-size: 42px;
     font-weight: bold;
     color: #252432;
     text-align: center;
 }
-.rating{
+
+.rating {
     margin-bottom: 15px;
 }
+
 .review-card {
     width: 366px;
     background-color: #F2EDED;
@@ -184,48 +188,57 @@ nav {
     flex-direction: column;
     gap: 24px;
 }
-.name{
+
+.name {
     display: flex;
     align-items: center;
     gap: 15px;
 }
+
 .comment {
     display: flex;
     flex-direction: column;
     gap: 10px;
 }
+
 .comment h3 {
     font-size: 24px;
     color: #1E1E1E;
     font-weight: bold;
     color: #252432;
 }
+
 .name img {
     width: 40px;
     height: 40px;
     border-radius: 50%;
 }
+
 .name-text h4 {
     font-size: 16px;
     color: #757575;
     font-weight: 500;
 }
+
 .name-text p {
     font-size: 14px;
     color: #B3B3B3;
     font-weight: 400;
 }
-.card-container{
+
+.card-container {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 20px;
 }
+
 .review-card:hover {
     transform: scale(1.025);
     box-shadow: #B3B3B3 0px 0px 20px;
     transition: 0.3s;
 }
+
 /* focus  */
 .focus {
     width: 80%;
@@ -240,23 +253,136 @@ nav {
     background-color: #f0f1f5;
     border-radius: 14px;
 }
+
 .focus-title {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 24px;
 }
+
 .focus-title h1 {
     font-size: 50px;
     font-weight: bold;
     color: #000000;
 }
+
 .focus-title p {
     /* font-size: 20px; */
     color: #767474;
     text-align: center;
 }
+
 .focus-img img {
     width: 840px;
     border-radius: 24px;
+}
+
+/* form  */
+.form {
+    width: 80%;
+    margin: 0 auto;
+    margin-bottom: 125px;
+    padding: 50px 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+
+}
+
+.form h1 {
+    color: #000;
+    font-family: "Raleway", sans-serif;
+    font-size: 97px;
+    font-style: normal;
+    font-weight: 700;
+
+}
+
+.inputs {
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+input[type=text] {
+    width: 100%;
+    padding: 12px 20px;
+    margin-top: 10px;
+    box-sizing: border-box;
+    border-radius: 10px;
+    border: none;
+}
+
+input[type=email] {
+    width: 100%;
+    padding: 12px 20px;
+    margin-top: 10px;
+    box-sizing: border-box;
+    border-radius: 10px;
+    border: none;
+}
+
+textarea {
+    width: 100%;
+    height: 167px;
+    margin-top: 10px;
+    padding: 12px 20px;
+
+    box-sizing: border-box;
+    border-radius: 10px;
+    border: none;
+}
+
+.inputs form {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.inputs form label {
+    font-size: 20px;
+    color: #000000;
+    font-weight: 400;
+
+}
+/* footer  */
+footer {
+    width: 100%;
+    padding: 104px 450px;
+    background-color: #FFFFFF;
+    margin-top: 125px;
+    text-align: center;
+}
+.foot{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 20px;
+    align-items: center;
+    width: fit-content;
+}
+.foot h1 {
+    font-size: 100px;
+    font-weight: 900;
+    color: #4E47FF;
+}
+.foot p {
+    font-size: 14px;
+    color: #8987A1;
+    font-weight: 400;
+}
+.links {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+}
+.links a {
+    text-decoration: none;
+    color: #8987A1;
+    font-size: 13px;
+    font-weight: 500;
 }
